--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -141,7 +141,6 @@ a {
 }  
 
 .logo {
-    position: absolute;
     top: 3px;
     left: 10px;
     width: 90px;
@@ -178,6 +177,12 @@ nav li a, nav li {
 
 nav li a:hover {
     color: rgba(0, 0, 255, 1);
+}
+
+nav li.active a {
+    color: rgba(0, 0, 255, 1);
+    font-weight: bolder;
+/*    border-bottom: 2px solid rgba(0, 0, 255, 0.7);*/
 }
     
 /*&#9776; this is the code for 3 bar menu*/
